Add product modal Fridas genser

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -217,6 +217,147 @@
         id="pattern"
         class="pattern-section container flex gap-6-4 margin-LF-auto"
       >
+        <!-- FRIDAS GENSER NORSK -->
+
+        <article id="fgn" class="page-section--product">
+          <i id="closeIconFgn" class="fa-solid fa-xmark pattern-page-icon"></i>
+          <p class="sticker">Norsk</p>
+          <h1 class="page-heading h1-heading product-heading font-size-6-4">
+            Fridas genser
+          </h1>
+          <section class="grid grid--6-cols gap-6-4">
+            <article class="pattern-img-section">
+              <div class="pattern-img-main">
+                <img class="main-img" src="/Img/Fridas-genser/6.png" />
+              </div>
+              <div class="pattern-img-other">
+                <img class="pattern-img" src="/Img/Fridas-genser/2.png" />
+                <img class="pattern-img" src="/Img/Fridas-genser/1.png" />
+                <img class="pattern-img" src="/Img/Fridas-genser/5.png" />
+                <img class="pattern-img" src="/Img/Fridas-genser/4.png" />
+              </div>
+            </article>
+            <article class="pattern-text pattern-description">
+              <h3 class="text-heading">Beskrivelse</h3>
+              <p class="description">
+                Fridagenser strikkes ovenfra og ned, i glattstrikk med vridde
+                vrangborder. Bærestykket starter med provisional cast on og blir
+                til med raglanøkninger. Genseren har en elegant v-hals og krage
+                som lages til slutt fra oppleggskanten.<br /><br />Genseren har
+                en vid passform, og rette ermer. Genseren strikkes i to
+                forskjellige garnkvaliteter som tilsammen blir en blanding av
+                ull, silke og bomull, som gjør genseren perfekt til alle
+                nordiske årstider.<br /><br />
+
+                <span>Vanskelighetsgrad:</span>
+                3 av 5
+              </p>
+              <a
+                target="_blank"
+                href="https://www.ravelry.com/patterns/library/fridas-genser"
+                class="btn btn--with-icon"
+              >
+                <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
+                KJØP PÅ RAVELRY
+              </a>
+            </article>
+            <article class="pattern-text pattern-info">
+              <h3 class="text-heading">Info</h3>
+              <p class="description">
+                <span>Størrelse:</span> XS (S) M (L) XL (2XL)<br /><br />
+                <span>Strikkefasthet:</span> 12 masker x 18 rader i glattstrikk
+                på pinne 8 mm = 10 x 10 cm<br /><br />
+                <span>Veiledende pinner:</span> Rundpinne 8 mm, 40 cm og 60/80
+                cm, og rundpinne 8 mm 40 cm og strømpepinner eller rundpinne 60
+                cm (magic loop)<br /><br />
+                <span>Garn:</span> En tråd Drops Brushed Alpaca Silk sammen med
+                en tråd Drops Muskat<br /><br />
+                <span>Garnalternativ:</span> En tråd Dale garn Kidsilk Erle
+                eller DSA Fearytale sammen med en tråd Gjestal garn Pure Merino,
+                Dale garn Lerke, Dale garn Alpakka Forte, Dale garn Merino 22
+                eller Jord Clothing Woolly<br /><br />
+                <span>Garnmengde:</span>100 (100) 125 (150) 150 (200) g Drops
+                brushed alpaca silk Lys Lavendel 17 sammen med 350 (350) 400
+                (450) 500 (500) g Drops muskat Lavendel 01<br /><br />
+                <span>Mål:</span><br />
+                <span>Lengde bak:</span> 50 (51) 53 (59) 60 (63) cm <br /><span
+                  >Overvidde/bol:</span
+                >
+                110 (115) 120 (125) 135 (138) cm
+              </p>
+            </article>
+          </section>
+        </article>
+
+        <!-- FRIDAS SWEATER ENGLISH -->
+
+        <article id="fge" class="page-section--product">
+          <i id="closeIconFge" class="fa-solid fa-xmark pattern-page-icon"></i>
+          <p class="sticker">English</p>
+          <h1 class="page-heading h1-heading product-heading font-size-6-4">
+            Frida's sweater
+          </h1>
+          <section class="grid grid--6-cols gap-6-4">
+            <article class="pattern-img-section">
+              <div class="pattern-img-main">
+                <img class="main-img" src="/Img/Fridas-genser/6.png" />
+              </div>
+              <div class="pattern-img-other">
+                <img class="pattern-img" src="/Img/Fridas-genser/2.png" />
+                <img class="pattern-img" src="/Img/Fridas-genser/1.png" />
+                <img class="pattern-img" src="/Img/Fridas-genser/5.png" />
+                <img class="pattern-img" src="/Img/Fridas-genser/4.png" />
+              </div>
+            </article>
+            <article class="pattern-text pattern-description">
+              <h3 class="text-heading">description</h3>
+              <p class="description">
+                Frida´s sweater is knitted from the top down, in stockinette
+                stick with twisted ribs.<br /><br />The yoke is made from
+                provisional cast on and continues with raglan increases.<br /><br />The
+                sweater has an elegant v-neck and collar which is made at the
+                end from the provisional cast on.<br /><br />Always start with a
+                swatch to check the gauge.<br /><br />
+
+                <span>Degree of difficulty:</span>
+                3 of 5
+              </p>
+              <a
+                target="_blank"
+                href="https://www.ravelry.com/patterns/library/fridas-genser"
+                class="btn btn--with-icon"
+              >
+                <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
+                BUY ON RAVELRY
+              </a>
+            </article>
+            <article class="pattern-text pattern-info">
+              <h3 class="text-heading">Info</h3>
+              <p class="description">
+                <span>Sizes:</span> XS (S) M (L) XL (2XL)<br /><br />
+                <span>Gauge:</span> 4”/10 cm = 12 sts / 18 rows stockinette.
+                Taken after wet blocking using 8 mm needles.<br /><br />
+                <span>Needles:</span> Circular needle size 8 mm - 40 cm and
+                60/80 cm. Circular needle size 7 mm ( US 10 ) - 40 cm and 60/80
+                cm and double pointed needle if you do not use magic loop.<br /><br />
+                <span>Yarn:</span> One thread Drops Brushed Alpaca Silk (25g =
+                140m) together with one thread Drops Muskat (50g = 100m)<br /><br />
+                <span>Yarn options:</span> One thread Sandnes Silk Mohair or
+                Dale garn Kidsilk Erle together with one thread Sandnes Line
+                eller Sandnes Duo or Gjestal garn Pure Merino or Dale garn
+                Lerke<br /><br />
+                <span>Materials: </span>100 (100) 125 (150) 150 (200) g Drops
+                brushed alpaca silk Lys Lavendel 17 together with 350 (350) 400
+                (450) 500 (500) g Drops muskat Lavendel 01<br /><br />
+                <span>Measurements:</span><br />
+                <span>Length back:</span> 50 (51) 53 (59) 60 (63) cm <br /><span
+                  >Body:</span
+                >
+                110 (115) 120 (125) 135 (138) cm
+              </p>
+            </article>
+          </section>
+        </article>
         <section class="section margin-LF-auto">
           <h2 class="pattern-heading h2-heading page-heading font-size-6-4">
             Oppskrifter
@@ -243,105 +384,80 @@
               >
                 <!-- GUROS LUE-->
                 <article class="pattern-card norsk">
-                  <a
-                    class="text-decoration-none"
-                    href="/HTML/Product-page.html"
-                  >
-                    <figure class="pattern-card-item">
-                      <img
-                        class="pattern-card-img"
-                        src="/img/Guros-lue/gl1.png"
-                        alt="woman with a knitted sweater on a boat"
-                      />
-                    </figure>
-                    <section class="pattern-card-text-box grid grid--1-col">
-                      <h3 class="pattern-card-heading">Guros lue</h3>
-                      <p class="pattern-card-price">30.00 NOK</p>
-                    </section>
-                  </a>
+                  <figure class="pattern-card-item">
+                    <img
+                      class="pattern-card-img"
+                      src="/img/Guros-lue/gl1.png"
+                      alt="woman with a knitted sweater on a boat"
+                    />
+                  </figure>
+                  <section class="pattern-card-text-box grid grid--1-col">
+                    <h3 class="pattern-card-heading">Guros lue</h3>
+                    <p class="pattern-card-price">30.00 NOK</p>
+                  </section>
                 </article>
 
                 <!-- MALINS GENSER -->
                 <article class="pattern-card norsk">
-                  <a
-                    class="text-decoration-none"
-                    href="/HTML/Product-page.html"
-                  >
-                    <figure class="pattern-card-item">
-                      <img
-                        class="pattern-card-img"
-                        src="/img/Malins-genser/1.png"
-                        alt="woman with a knitted sweater on a boat"
-                      />
-                    </figure>
-                    <section class="pattern-card-text-box grid grid--1-col">
-                      <h3 class="pattern-card-heading">Malins genser</h3>
-                      <p class="pattern-card-price">60.00 NOK</p>
-                    </section>
-                  </a>
+                  <figure class="pattern-card-item">
+                    <img
+                      class="pattern-card-img"
+                      src="/img/Malins-genser/1.png"
+                      alt="woman with a knitted sweater on a boat"
+                    />
+                  </figure>
+                  <section class="pattern-card-text-box grid grid--1-col">
+                    <h3 class="pattern-card-heading">Malins genser</h3>
+                    <p class="pattern-card-price">60.00 NOK</p>
+                  </section>
                 </article>
 
                 <!-- GUROS GENSER -->
 
                 <article class="pattern-card norsk">
-                  <a
-                    class="text-decoration-none"
-                    href="/HTML/Product-page.html"
-                  >
-                    <figure class="pattern-card-item">
-                      <img
-                        class="pattern-card-img"
-                        src="/Img/Guros-genser/3.png"
-                        alt="Green knitted sweater"
-                      />
-                    </figure>
-                    <section class="pattern-card-text-box grid grid--1-col">
-                      <h3 class="pattern-card-heading">Guros genser</h3>
-                      <p class="pattern-card-price">60.00 NOK</p>
-                    </section>
-                  </a>
+                  <figure class="pattern-card-item">
+                    <img
+                      class="pattern-card-img"
+                      src="/Img/Guros-genser/3.png"
+                      alt="Green knitted sweater"
+                    />
+                  </figure>
+                  <section class="pattern-card-text-box grid grid--1-col">
+                    <h3 class="pattern-card-heading">Guros genser</h3>
+                    <p class="pattern-card-price">60.00 NOK</p>
+                  </section>
                 </article>
 
                 <!-- FRIDAS GENSER -->
-                <article class="pattern-card norsk">
-                  <a
-                    class="text-decoration-none"
-                    href="/HTML/Product-page.html"
-                  >
-                    <figure class="pattern-card-item">
-                      <img
-                        class="pattern-card-img"
-                        src="/Img/Fridas-genser/3.png"
-                        alt="purple knitted sweater"
-                      />
-                    </figure>
+                <article id="fgnCard" class="pattern-card norsk">
+                  <figure class="pattern-card-item">
+                    <img
+                      class="pattern-card-img"
+                      src="/Img/Fridas-genser/3.png"
+                      alt="purple knitted sweater"
+                    />
+                  </figure>
 
-                    <section class="pattern-card-text-box grid grid--1-col">
-                      <h3 class="pattern-card-heading">Fridas genser</h3>
-                      <p class="pattern-card-price">60.00 NOK</p>
-                    </section>
-                  </a>
+                  <section class="pattern-card-text-box grid grid--1-col">
+                    <h3 class="pattern-card-heading">Fridas genser</h3>
+                    <p class="pattern-card-price">60.00 NOK</p>
+                  </section>
                 </article>
 
                 <!-- EVELINAGENSER -->
                 <article class="pattern-card norsk">
-                  <a
-                    class="text-decoration-none"
-                    href="/HTML/Product-page.html"
-                  >
-                    <figure class="pattern-card-item">
-                      <img
-                        class="pattern-card-img"
-                        src="/Img/Evelinagenser/Evelinagenser 2.jpg"
-                        alt="purple knitted sweater"
-                      />
-                    </figure>
+                  <figure class="pattern-card-item">
+                    <img
+                      class="pattern-card-img"
+                      src="/Img/Evelinagenser/Evelinagenser 2.jpg"
+                      alt="purple knitted sweater"
+                    />
+                  </figure>
 
-                    <section class="pattern-card-text-box grid grid--1-col">
-                      <h3 class="pattern-card-heading">Evelinagenser</h3>
-                      <p class="pattern-card-price">60.00 NOK</p>
-                    </section>
-                  </a>
+                  <section class="pattern-card-text-box grid grid--1-col">
+                    <h3 class="pattern-card-heading">Evelinagenser</h3>
+                    <p class="pattern-card-price">60.00 NOK</p>
+                  </section>
                 </article>
               </section>
               <!-- ENGLISH -->
@@ -351,43 +467,33 @@
                 <!-- GUROS SWEATER -->
 
                 <article class="pattern-card english">
-                  <a
-                    class="text-decoration-none"
-                    href="/HTML/Product-page.html"
-                  >
-                    <figure class="pattern-card-item">
-                      <img
-                        class="pattern-card-img"
-                        src="/Img/Guros-genser/3.png"
-                        alt="Green knitted sweater"
-                      />
-                    </figure>
-                    <section class="pattern-card-text-box grid grid--1-col">
-                      <h3 class="pattern-card-heading">Guro´s sweater</h3>
-                      <p class="pattern-card-price">60.00 NOK</p>
-                    </section>
-                  </a>
+                  <figure class="pattern-card-item">
+                    <img
+                      class="pattern-card-img"
+                      src="/Img/Guros-genser/3.png"
+                      alt="Green knitted sweater"
+                    />
+                  </figure>
+                  <section class="pattern-card-text-box grid grid--1-col">
+                    <h3 class="pattern-card-heading">Guro´s sweater</h3>
+                    <p class="pattern-card-price">60.00 NOK</p>
+                  </section>
                 </article>
 
                 <!-- Frida´s sweater -->
-                <article class="pattern-card english">
-                  <a
-                    class="text-decoration-none"
-                    href="/HTML/Product-page.html"
-                  >
-                    <figure class="pattern-card-item">
-                      <img
-                        class="pattern-card-img"
-                        src="/Img/Fridas-genser/3.png"
-                        alt="purple knitted sweater"
-                      />
-                    </figure>
+                <article id="fgeCard" class="pattern-card english">
+                  <figure class="pattern-card-item">
+                    <img
+                      class="pattern-card-img"
+                      src="/Img/Fridas-genser/3.png"
+                      alt="purple knitted sweater"
+                    />
+                  </figure>
 
-                    <section class="pattern-card-text-box grid grid--1-col">
-                      <h3 class="pattern-card-heading">Frida´s sweater</h3>
-                      <p class="pattern-card-price">60.00 NOK</p>
-                    </section>
-                  </a>
+                  <section class="pattern-card-text-box grid grid--1-col">
+                    <h3 class="pattern-card-heading">Frida´s sweater</h3>
+                    <p class="pattern-card-price">60.00 NOK</p>
+                  </section>
                 </article>
               </section>
 
@@ -397,23 +503,18 @@
               >
                 <!-- EVELINATRÖJAN -->
                 <article class="pattern-card svenska">
-                  <a
-                    class="text-decoration-none"
-                    href="/HTML/Product-page.html"
-                  >
-                    <figure class="pattern-card-item">
-                      <img
-                        class="pattern-card-img"
-                        src="/Img/Evelinagenser/Evelinagenser 2.jpg"
-                        alt="purple knitted sweater"
-                      />
-                    </figure>
+                  <figure class="pattern-card-item">
+                    <img
+                      class="pattern-card-img"
+                      src="/Img/Evelinagenser/Evelinagenser 2.jpg"
+                      alt="purple knitted sweater"
+                    />
+                  </figure>
 
-                    <section class="pattern-card-text-box grid grid--1-col">
-                      <h3 class="pattern-card-heading">Evelinatröjan</h3>
-                      <p class="pattern-card-price">60.00 NOK</p>
-                    </section>
-                  </a>
+                  <section class="pattern-card-text-box grid grid--1-col">
+                    <h3 class="pattern-card-heading">Evelinatröjan</h3>
+                    <p class="pattern-card-price">60.00 NOK</p>
+                  </section>
                 </article>
               </section>
             </section>
