--- a/HTML/Product-page.html
+++ b/HTML/Product-page.html
@@ -1,246 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/7e265188ef.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="/Src/CSS/style.css" />
-    <link rel="stylesheet" href="/Src/CSS/queries.css" />
-
-    <title>EMMA</title>
-  </head>
-
-  <!-- --------------- -->
-  <!-- HEADER SECTION -->
-  <!-- --------------- -->
-  <header class="flex align-items--center navbar" id="navbar">
-    <a class="header-logo" href="/Src/HTML/index.html">
-      <img
-        class="logo"
-        alt="EMMA by Emma Elisabeth Knit logo"
-        src="/Src/Img/Logo/Ren logo.svg"
-      />
-    </a>
-    <!-- --------------- -->
-    <!-- NAV SECTION -->
-    <!-- --------------- -->
-
-    <nav class="main-nav">
-      <button class="btn-mobile-nav open-mobile">
-        <i class="fa-solid fa-bars menu-icon menu-icon--open"></i>
-      </button>
-      <button class="btn-mobile-nav close-mobile hide">
-        <i class="fa-solid fa-xmark menu-icon menu-icon--close"></i>
-      </button>
-      <!-- NAV MENU: SMALL SCREENS -->
-      <ul
-        class="main-nav-list-mobile flex flex-dir-column align-items--center hide"
-      >
-        <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/src/HTML/index.html/#pattern"
-            >OPPSKRIFTER</a
-          >
-        </li>
-        <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/Src/HTML/index.html/#about"
-            >OM EMMA</a
-          >
-        </li>
-        <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/Src/HTML/index.html/#contact"
-            >Kontakt</a
-          >
-        </li>
-      </ul>
-      <!-- NAV MENU: BIG SCREEN -->
-      <ul
-        class="main-nav-list font-size-1-6 big-screen flex align-items--center"
-      >
-        <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/src/HTML/index.html/#pattern"
-            >OPPSKRIFTER</a
-          >
-        </li>
-        <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/Src/HTML/index.html/#about"
-            >OM EMMA</a
-          >
-        </li>
-        <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/Src/HTML/index.html/#contact"
-            >Kontakt</a
-          >
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <!-- ---------------- -->
-  <!-- PAGE SECTION -->
-  <!-- ---------------- -->
-  <body>
-    <main class="main-section pattern-page margin-LF-auto">
-      <!-- ---------------- -->
-      <!-- FRIDAS GENSER NORSK -->
-      <!-- ---------------- -->
-      <article id="fgn" class="page-section">
-        <p class="sticker">Norsk</p>
-        <h1 class="page-heading h1-heading product-heading font-size-6-4">
-          Fridas genser
-        </h1>
-        <section class="grid grid--6-cols gap-6-4">
-          <article class="pattern-img-section">
-            <div class="pattern-img-main">
-              <img class="main-img" src="/src/Img/Fridas-genser/6.png" />
-            </div>
-            <div class="pattern-img-other">
-              <img class="pattern-img" src="/src/Img/Fridas-genser/2.png" />
-              <img class="pattern-img" src="/src/Img/Fridas-genser/1.png" />
-              <img class="pattern-img" src="/src/Img/Fridas-genser/5.png" />
-              <img class="pattern-img" src="/src/Img/Fridas-genser/4.png" />
-            </div>
-          </article>
-          <article class="pattern-text pattern-description">
-            <h3 class="text-heading">Beskrivelse</h3>
-            <p class="description">
-              Fridagenser strikkes ovenfra og ned, i glattstrikk med vridde
-              vrangborder. Bærestykket starter med provisional cast on og blir
-              til med raglanøkninger. Genseren har en elegant v-hals og krage
-              som lages til slutt fra oppleggskanten.<br /><br />Genseren har en
-              vid passform, og rette ermer. Genseren strikkes i to forskjellige
-              garnkvaliteter som tilsammen blir en blanding av ull, silke og
-              bomull, som gjør genseren perfekt til alle nordiske årstider.<br /><br />
-              Oppskriften sendes digitalt som PDF-fil.<br /><br />
-              <span>Vanskelighetsgrad:</span>
-              3 av 5
-            </p>
-            <a
-              target="_blank"
-              href="https://www.ravelry.com/patterns/library/fridas-genser"
-              class="btn btn--with-icon"
-            >
-              <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
-              KJØP PÅ RAVELRY
-            </a>
-          </article>
-          <article class="pattern-text pattern-info">
-            <h3 class="text-heading">Info</h3>
-            <p class="description">
-              <span>Størrelse:</span> XS (S) M (L) XL (2XL)<br /><br />
-              <span>Strikkefasthet:</span> 12 masker x 18 rader i glattstrikk på
-              pinne 8 mm = 10 x 10 cm<br /><br />
-              <span>Veiledende pinner:</span> Rundpinne 8 mm, 40 cm og 60/80 cm,
-              og rundpinne 8 mm 40 cm og strømpepinner eller rundpinne 60 cm
-              (magic loop)<br /><br />
-              <span>Garn:</span> En tråd Drops Brushed Alpaca Silk sammen med en
-              tråd Drops Muskat<br /><br />
-              <span>Garnalternativ:</span> En tråd Dale garn Kidsilk Erle eller
-              DSA Fearytale sammen med en tråd Gjestal garn Pure Merino, Dale
-              garn Lerke, Dale garn Alpakka Forte, Dale garn Merino 22 eller
-              Jord Clothing Woolly<br /><br />
-              <span>Garnmengde:</span>100 (100) 125 (150) 150 (200) g Drops
-              brushed alpaca silk Lys Lavendel 17 sammen med 350 (350) 400 (450)
-              500 (500) g Drops muskat Lavendel 01<br /><br />
-              <span>Mål:</span><br />
-              <span>Lengde bak:</span> 50 (51) 53 (59) 60 (63) cm <br /><span
-                >Overvidde/bol:</span
-              >
-              110 (115) 120 (125) 135 (138) cm
-            </p>
-          </article>
-        </section>
-      </article>
-
-      <!-- ---------------- -->
-      <!-- FRIDAS SWEATER ENGLISH -->
-      <!-- ---------------- -->
-      <article id="fge" class="page-section">
-        <p class="sticker">English</p>
-        <h1 class="page-heading h1-heading product-heading font-size-6-4">
-          Frida´s sweater
-        </h1>
-        <section class="grid grid--6-cols gap-6-4">
-          <article class="pattern-img-section">
-            <div class="pattern-img-main">
-              <img class="main-img" src="/src/Img/Fridas-genser/6.png" />
-            </div>
-            <div class="pattern-img-other">
-              <img class="pattern-img" src="/src/Img/Fridas-genser/2.png" />
-              <img class="pattern-img" src="/src/Img/Fridas-genser/1.png" />
-              <img class="pattern-img" src="/src/Img/Fridas-genser/5.png" />
-              <img class="pattern-img" src="/src/Img/Fridas-genser/4.png" />
-            </div>
-          </article>
-          <article class="pattern-text pattern-description">
-            <h3 class="text-heading">description</h3>
-            <p class="description">
-              Frida´s sweater is knitted from the top down, in stockinette stick
-              with twisted ribs.<br /><br />The yoke is made from provisional
-              cast on and continues with raglan increases.<br /><br />The
-              sweater has an elegant v-neck and collar which is made at the end
-              from the provisional cast on.<br /><br />Always start with a
-              swatch to check the gauge.<br /><br />
-              The pattern is sent digitally as a pdf file<br /><br />
-              <span>Degree of difficulty:</span>
-              3 of 5
-            </p>
-            <a
-              target="_blank"
-              href="https://www.ravelry.com/patterns/library/fridas-genser"
-              class="btn btn--with-icon"
-            >
-              <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
-              BUY ON RAVELRY
-            </a>
-          </article>
-          <article class="pattern-text pattern-info">
-            <h3 class="text-heading">Info</h3>
-            <p class="description">
-              <span>Sizes:</span> XS (S) M (L) XL (2XL)<br /><br />
-              <span>Gauge:</span> 4”/10 cm = 12 sts / 18 rows stockinette. Taken
-              after wet blocking using 8 mm needles.<br /><br />
-              <span>Needles:</span> Circular needle size 8 mm - 40 cm and 60/80
-              cm. Circular needle size 7 mm ( US 10 ) - 40 cm and 60/80 cm and
-              double pointed needle if you do not use magic loop.<br /><br />
-              <span>Yarn:</span> One thread Drops Brushed Alpaca Silk (25g =
-              140m) together with one thread Drops Muskat (50g = 100m)<br /><br />
-              <span>Yarn options:</span> One thread Sandnes Silk Mohair or Dale
-              garn Kidsilk Erle together with one thread Sandnes Line eller
-              Sandnes Duo or Gjestal garn Pure Merino or Dale garn Lerke<br /><br />
-              <span>Materials: </span>100 (100) 125 (150) 150 (200) g Drops
-              brushed alpaca silk Lys Lavendel 17 together with 350 (350) 400
-              (450) 500 (500) g Drops muskat Lavendel 01<br /><br />
-              <span>Measurements:</span><br />
-              <span>Length back:</span> 50 (51) 53 (59) 60 (63) cm <br /><span
-                >Body:</span
-              >
-              110 (115) 120 (125) 135 (138) cm
-            </p>
-          </article>
-        </section>
-      </article>
+      
 
       <!-- ---------------- -->
       <!-- GUROS GENSER NORSK -->
@@ -624,7 +383,7 @@
       <!-- ---------------- -->
       <!-- GUROS LUE NORSK -->
       <!-- ---------------- -->
-      <article id="egn" class="active page-section">
+      <article id="gln" class="page-section">
         <p class="sticker">Norsk</p>
         <h1 class="page-heading h1-heading product-heading font-size-6-4">
           Guros lue
