--- a/HTML/index.html
+++ b/HTML/index.html
@@ -734,21 +734,36 @@
 
         <!-- GUROS LUE NORSK -->
 
-        <article id="gln" class="page-section--product">
+        <article id="gln" class="page-section--product active">
           <i id="closeIconGln" class="fa-solid fa-xmark pattern-page-icon"></i>
           <p class="sticker">Norsk</p>
           <h1 class="page-heading h1-heading product-heading font-size-6-4">
             Guros lue
           </h1>
-          <section class="grid grid--6-cols gap-6-4">
+          <section class="grid grid--3-cols gap-6-4">
             <article class="pattern-img-section">
-              <div class="pattern-img-main">
-                <img class="main-img" src="/Img/Guros-lue/gl1.png" />
+              <!-- Slide container -->
+              <div class="slider">
+                <!-- Slide 1 -->
+                <div class="slide pattern-img-main">
+                  <img class="pattern-img" src="/Img/Guros-lue/gl1.png" />
+                </div>
+                <!-- Slide 2 -->
+                <div class="slide">
+                  <img class="pattern-img" src="/Img/Guros-lue/gl2.png" />
+                </div>
+                <!-- Slide 3 -->
+                <div class="slide">
+                  <img class="pattern-img" src="/Img/Guros-lue/gl4.png" />
+                </div>
               </div>
-              <div class="pattern-img-other">
-                <img class="pattern-img" src="/Img/Guros-lue/gl2.png" />
-                <img class="pattern-img" src="/Img/Guros-lue/gl4.png" />
-              </div>
+              <!-- Buttons -->
+              <button class="btn-prev slide-btn">
+                <i class="fa-solid fa-angle-left"></i>
+              </button>
+              <button class="btn-next slide-btn">
+                <i class="fa-solid fa-angle-right"></i>
+              </button>
             </article>
             <article class="pattern-text pattern-description">
               <h3 class="text-heading">Beskrivelse</h3>
