Add carousel to more product modals

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -660,24 +660,33 @@
           </h1>
           <section class="grid grid--6-cols gap-6-4">
             <article class="pattern-img-section">
-              <div class="pattern-img-main">
-                <img
-                  class="main-img"
-                  src="/Img/Evelinagenser/Evelinagenser 1.jpg"
-                />
+              <!-- Slide container -->
+              <div class="slider">
+                <!-- Slide 1 -->
+                <div class="slide pattern-img-main">
+                  <img
+                    class="pattern-img"
+                    src="/Img/Evelinagenser/Evelinagenser 2.jpg"
+                  />
+                </div>
+                <!-- Slide 2 -->
+                <div class="slide">
+                  <img class="pattern-img" src="/Img/Guros-lue/gl2.png" />
+                </div>
+                <!-- Slide 3 -->
+                <div class="slide">
+                  <img class="pattern-img" src="/Img/Guros-lue/gl4.png" />
+                </div>
               </div>
-              <div class="pattern-img-other">
-                <img class="pattern-img" src=/Img/Evelinagenser/Evelinagenser
-                2.jpg" /> <img class="pattern-img"
-                src=/Img/Evelinagenser/Evelinagenser 3.jpg" /> <img
-                class="pattern-img" src=/Img/Evelinagenser/Evelinagenser 4.jpg"
-                />
-                <img
-                  class="pattern-img"
-                  src="/Img/Evelinagenser/Evelinagenser 5.jpg"
-                />
-              </div>
+              <!-- Buttons -->
+              <button class="btn-prev slide-btn">
+                <i class="fa-solid fa-angle-left"></i>
+              </button>
+              <button class="btn-next slide-btn">
+                <i class="fa-solid fa-angle-right"></i>
+              </button>
             </article>
+
             <article class="pattern-text pattern-description">
               <h3 class="text-heading">Beskrivning</h3>
               <p class="description">
