--- a/HTML/index.html
+++ b/HTML/index.html
@@ -219,7 +219,7 @@
       >
         <!-- FRIDAS GENSER NORSK -->
 
-        <article id="fgn" class="page-section--product">
+        <!-- <article id="fgn" class="page-section--product">
           <i id="closeIconFgn" class="fa-solid fa-xmark pattern-page-icon"></i>
           <p class="sticker">Norsk</p>
           <h1 class="page-heading h1-heading product-heading font-size-6-4">
@@ -287,11 +287,11 @@
               </p>
             </article>
           </section>
-        </article>
+        </article> -->
 
         <!-- FRIDAS SWEATER ENGLISH -->
 
-        <article id="fge" class="page-section--product">
+        <!-- <article id="fge" class="page-section--product">
           <i id="closeIconFge" class="fa-solid fa-xmark pattern-page-icon"></i>
           <p class="sticker">English</p>
           <h1 class="page-heading h1-heading product-heading font-size-6-4">
@@ -357,11 +357,11 @@
               </p>
             </article>
           </section>
-        </article>
+        </article> -->
 
         <!-- GUROS GENSER NORSK -->
 
-        <article id="ggn" class="page-section--product">
+        <!-- <article id="ggn" class="page-section--product">
           <i id="closeIconGgn" class="fa-solid fa-xmark pattern-page-icon"></i>
           <p class="sticker">Norsk</p>
           <h1 class="page-heading h1-heading product-heading font-size-6-4">
@@ -427,10 +427,10 @@
               </p>
             </article>
           </section>
-        </article>
+        </article> -->
         <!-- GUROS SWEATER ENGLISH -->
 
-        <article id="gge" class="page-section--product">
+        <!-- <article id="gge" class="page-section--product">
           <i id="closeIconGge" class="fa-solid fa-xmark pattern-page-icon"></i>
           <p class="sticker">English</p>
           <h1 class="page-heading h1-heading product-heading font-size-6-4">
@@ -493,11 +493,11 @@
               </p>
             </article>
           </section>
-        </article>
+        </article> -->
 
         <!-- MALINS GENSER NORSK -->
 
-        <article id="mgn" class="page-section--product">
+        <!-- <article id="mgn" class="page-section--product">
           <i id="closeIconMgn" class="fa-solid fa-xmark pattern-page-icon"></i>
           <p class="sticker">Norsk</p>
           <h1 class="page-heading h1-heading product-heading font-size-6-4">
@@ -565,10 +565,10 @@
               </p>
             </article>
           </section>
-        </article>
+        </article> -->
         <!-- EVELINAGENSER NORSK -->
 
-        <article id="egn" class="page-section--product">
+        <!-- <article id="egn" class="page-section--product">
           <i id="closeIconEgn" class="fa-solid fa-xmark pattern-page-icon"></i>
           <p class="sticker">Norsk</p>
           <h1 class="page-heading h1-heading product-heading font-size-6-4">
@@ -649,10 +649,10 @@
               </p>
             </article>
           </section>
-        </article>
+        </article> -->
         <!-- EVELINAGENSER SVENSK -->
 
-        <article id="egs" class="page-section--product">
+        <!-- <article id="egs" class="page-section--product">
           <i id="closeIconEgs" class="fa-solid fa-xmark pattern-page-icon"></i>
           <p class="sticker">Svenska</p>
           <h1 class="page-heading h1-heading product-heading font-size-6-4">
@@ -660,26 +660,26 @@
           </h1>
           <section class="grid grid--6-cols gap-6-4">
             <article class="pattern-img-section">
-              <!-- Slide container -->
+              Slide container
               <div class="slider">
-                <!-- Slide 1 -->
+                Slide 1
                 <div class="slide pattern-img-main">
                   <img
                     class="pattern-img"
                     src="/Img/Evelinagenser/Evelinagenser 2.jpg"
                   />
                 </div>
-                <!-- Slide 2 -->
+                Slide 2
                 <div class="slide">
                   <img class="pattern-img" src="/Img/Guros-lue/gl2.png" />
-                </div>
-                <!-- Slide 3 -->
-                <div class="slide">
+                </div> -->
+        <!-- Slide 3 -->
+        <!-- <div class="slide">
                   <img class="pattern-img" src="/Img/Guros-lue/gl4.png" />
                 </div>
-              </div>
-              <!-- Buttons -->
-              <button class="btn-prev slide-btn">
+              </div> -->
+        <!-- Buttons -->
+        <!-- <button class="btn-prev slide-btn">
                 <i class="fa-solid fa-angle-left"></i>
               </button>
               <button class="btn-next slide-btn">
@@ -713,8 +713,8 @@
                 <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
                 KÖP PÅ RAVELRY
               </a>
-            </article>
-            <article class="pattern-text pattern-info">
+            </article> -->
+        <!-- <article class="pattern-text pattern-info">
               <h3 class="text-heading">Info</h3>
               <p class="description">
                 <span>Storlekar:</span> XS (S) M (L) XL<br /><br />
@@ -739,85 +739,7 @@
               </p>
             </article>
           </section>
-        </article>
-
-        <!-- GUROS LUE NORSK -->
-
-        <article id="gln" class="page-section--product active">
-          <i id="closeIconGln" class="fa-solid fa-xmark pattern-page-icon"></i>
-          <p class="sticker">Norsk</p>
-          <h1 class="page-heading h1-heading product-heading font-size-6-4">
-            Guros lue
-          </h1>
-          <section class="grid grid--3-cols gap-6-4">
-            <article class="pattern-img-section">
-              <!-- Slide container -->
-              <div class="slider">
-                <!-- Slide 1 -->
-                <div class="slide pattern-img-main">
-                  <img class="pattern-img" src="/Img/Guros-lue/gl1.png" />
-                </div>
-                <!-- Slide 2 -->
-                <div class="slide">
-                  <img class="pattern-img" src="/Img/Guros-lue/gl2.png" />
-                </div>
-                <!-- Slide 3 -->
-                <div class="slide">
-                  <img class="pattern-img" src="/Img/Guros-lue/gl4.png" />
-                </div>
-              </div>
-              <!-- Buttons -->
-              <button class="btn-prev slide-btn">
-                <i class="fa-solid fa-angle-left"></i>
-              </button>
-              <button class="btn-next slide-btn">
-                <i class="fa-solid fa-angle-right"></i>
-              </button>
-            </article>
-            <article class="pattern-text pattern-description">
-              <h3 class="text-heading">Beskrivelse</h3>
-              <p class="description">
-                Guros lue strikkes nedenfra og opp i perleribb. Brettekanten
-                nederst på luen strikkes opp underveis. På den måten blir luen
-                ekstra tykk over ørene, uten at brettekanten kan skli opp eller
-                ned i bruk.<br /><br />Strikk alltid en prøvelapp først for å
-                sjekke strikkefastheten.<br /><br />
-
-                <span>Vanskelighetsgrad:</span>
-                2 av 5
-              </p>
-              <a
-                target="_blank"
-                href="https://www.ravelry.com/patterns/library/guros-lue"
-                class="btn btn--with-icon"
-              >
-                <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
-                KJØP PÅ RAVELRY
-              </a>
-            </article>
-            <article class="pattern-text pattern-info">
-              <h3 class="text-heading">Info</h3>
-              <p class="description">
-                <span>Størrelse:</span> 1-3 mnd (6-9 mnd) 1-2 år (2-3 år) 4-8 år
-                (ungdom/dame) herre<br /><br />
-                <span>Passer hodeomkrets:</span> 32 (40-42) 44 (46) 50 (54-56)
-                58-60 cm<br /><br />
-                <span>Strikkefasthet:</span> 16 masker perleribb på p 4,5mm = 10
-                cm<br /><br />
-                <span>Veiledende pinner:</span> 4,5 mm rundpinne 30 cm (for de
-                minste str)/ 40 cm og strømpepinner eller 60/80 cm rundpinne til
-                magic loop.<br /><br />
-                <span>Materiale:</span> 50 (50) 50 (100) 100 (100) 100g Double
-                Sunday fra Sandnes garn (50g = 108m)<br />
-                <br />
-                <span>Garnalternativ:</span> <br />Dale garn Merino 22, <br />
-                DSA Alpakka Tweed classic,<br />Klompelompe merinoull,<br />
-                Rauma Puno Petit, <br />Drops Merino Extra Fine,<br />
-                eller Drops Sky
-              </p>
-            </article>
-          </section>
-        </article>
+        </article>  -->
 
         <section class="section margin-LF-auto">
           <h2 class="pattern-heading h2-heading page-heading font-size-6-4">
@@ -844,7 +766,11 @@
                 class="lang-norsk grid grid--3-cols gap-3-2 language-filter"
               >
                 <!-- GUROS LUE-->
-                <article id="glnCard" class="pattern-card norsk">
+                <a
+                  href="/HTML/Guros-lue.html"
+                  id="glnCard"
+                  class="pattern-card norsk"
+                >
                   <figure class="pattern-card-item">
                     <img
                       class="pattern-card-img"
@@ -856,10 +782,10 @@
                     <h3 class="pattern-card-heading">Guros lue</h3>
                     <p class="pattern-card-price">30.00 NOK</p>
                   </section>
-                </article>
+                </a>
 
                 <!-- MALINS GENSER -->
-                <article id="mgnCard" class="pattern-card norsk">
+                <a id="mgnCard" class="pattern-card norsk">
                   <figure class="pattern-card-item">
                     <img
                       class="pattern-card-img"
@@ -871,11 +797,11 @@
                     <h3 class="pattern-card-heading">Malins genser</h3>
                     <p class="pattern-card-price">60.00 NOK</p>
                   </section>
-                </article>
+                </a>
 
                 <!-- GUROS GENSER -->
 
-                <article id="ggnCard" class="pattern-card norsk">
+                <a id="ggnCard" class="pattern-card norsk">
                   <figure class="pattern-card-item">
                     <img
                       class="pattern-card-img"
@@ -887,10 +813,10 @@
                     <h3 class="pattern-card-heading">Guros genser</h3>
                     <p class="pattern-card-price">60.00 NOK</p>
                   </section>
-                </article>
+                </a>
 
                 <!-- FRIDAS GENSER -->
-                <article id="fgnCard" class="pattern-card norsk">
+                <a id="fgnCard" class="pattern-card norsk">
                   <figure class="pattern-card-item">
                     <img
                       class="pattern-card-img"
@@ -903,10 +829,10 @@
                     <h3 class="pattern-card-heading">Fridas genser</h3>
                     <p class="pattern-card-price">60.00 NOK</p>
                   </section>
-                </article>
+                </a>
 
                 <!-- EVELINAGENSER -->
-                <article id="egnCard" class="pattern-card norsk">
+                <a id="egnCard" class="pattern-card norsk">
                   <figure class="pattern-card-item">
                     <img
                       class="pattern-card-img"
@@ -919,64 +845,7 @@
                     <h3 class="pattern-card-heading">Evelinagenser</h3>
                     <p class="pattern-card-price">60.00 NOK</p>
                   </section>
-                </article>
-              </section>
-              <!-- ENGLISH -->
-              <section
-                class="lang-english grid grid--3-cols gap-3-2 language-filter"
-              >
-                <!-- GUROS SWEATER -->
-
-                <article id="ggeCard" class="pattern-card english">
-                  <figure class="pattern-card-item">
-                    <img
-                      class="pattern-card-img"
-                      src="/Img/Guros-genser/3.png"
-                      alt="Green knitted sweater"
-                    />
-                  </figure>
-                  <section class="pattern-card-text-box grid grid--1-col">
-                    <h3 class="pattern-card-heading">Guro's sweater</h3>
-                    <p class="pattern-card-price">60.00 NOK</p>
-                  </section>
-                </article>
-
-                <!-- Frida´s sweater -->
-                <article id="fgeCard" class="pattern-card english">
-                  <figure class="pattern-card-item">
-                    <img
-                      class="pattern-card-img"
-                      src="/Img/Fridas-genser/3.png"
-                      alt="purple knitted sweater"
-                    />
-                  </figure>
-
-                  <section class="pattern-card-text-box grid grid--1-col">
-                    <h3 class="pattern-card-heading">Frida's sweater</h3>
-                    <p class="pattern-card-price">60.00 NOK</p>
-                  </section>
-                </article>
-              </section>
-
-              <!-- SWEDISH -->
-              <section
-                class="lang-svenska grid grid--3-cols gap-3-2 language-filter"
-              >
-                <!-- EVELINATRÖJAN -->
-                <article id="egsCard" class="pattern-card svenska">
-                  <figure class="pattern-card-item">
-                    <img
-                      class="pattern-card-img"
-                      src="/Img/Evelinagenser/Evelinagenser 2.jpg"
-                      alt="purple knitted sweater"
-                    />
-                  </figure>
-
-                  <section class="pattern-card-text-box grid grid--1-col">
-                    <h3 class="pattern-card-heading">Evelinatröjan</h3>
-                    <p class="pattern-card-price">60.00 NOK</p>
-                  </section>
-                </article>
+                </a>
               </section>
             </section>
             <p class="pattern-text--ps">
