Update carousel btns

--- a/HTML/Guros-lue.html
+++ b/HTML/Guros-lue.html
@@ -119,10 +119,10 @@
           </div>
           <!-- Buttons -->
           <button class="btn-prev slide-btn">
-            <i class="fa-solid fa-angle-left"></i>
+            <i class="fa-solid fa-angle-left arrow-icon"></i>
           </button>
           <button class="btn-next slide-btn">
-            <i class="fa-solid fa-angle-right"></i>
+            <i class="fa-solid fa-angle-right arrow-icon"></i>
           </button>
         </article>
         <article class="pattern-text pattern-description">
