Create Fridas genser page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -217,78 +217,6 @@
         id="pattern"
         class="pattern-section container flex gap-6-4 margin-LF-auto"
       >
-        <!-- FRIDAS GENSER NORSK -->
-
-        <!-- <article id="fgn" class="page-section--product">
-          <i id="closeIconFgn" class="fa-solid fa-xmark pattern-page-icon"></i>
-          <p class="sticker">Norsk</p>
-          <h1 class="page-heading h1-heading product-heading font-size-6-4">
-            Fridas genser
-          </h1>
-          <section class="grid grid--6-cols gap-6-4">
-            <article class="pattern-img-section">
-              <div class="pattern-img-main">
-                <img class="main-img" src="/Img/Fridas-genser/6.png" />
-              </div>
-              <div class="pattern-img-other">
-                <img class="pattern-img" src="/Img/Fridas-genser/2.png" />
-                <img class="pattern-img" src="/Img/Fridas-genser/1.png" />
-                <img class="pattern-img" src="/Img/Fridas-genser/5.png" />
-                <img class="pattern-img" src="/Img/Fridas-genser/4.png" />
-              </div>
-            </article>
-            <article class="pattern-text pattern-description">
-              <h3 class="text-heading">Beskrivelse</h3>
-              <p class="description">
-                Fridagenser strikkes ovenfra og ned, i glattstrikk med vridde
-                vrangborder. Bærestykket starter med provisional cast on og blir
-                til med raglanøkninger. Genseren har en elegant v-hals og krage
-                som lages til slutt fra oppleggskanten.<br /><br />Genseren har
-                en vid passform, og rette ermer. Genseren strikkes i to
-                forskjellige garnkvaliteter som tilsammen blir en blanding av
-                ull, silke og bomull, som gjør genseren perfekt til alle
-                nordiske årstider.<br /><br />
-
-                <span>Vanskelighetsgrad:</span>
-                3 av 5
-              </p>
-              <a
-                target="_blank"
-                href="https://www.ravelry.com/patterns/library/fridas-genser"
-                class="btn btn--with-icon"
-              >
-                <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
-                KJØP PÅ RAVELRY
-              </a>
-            </article>
-            <article class="pattern-text pattern-info">
-              <h3 class="text-heading">Info</h3>
-              <p class="description">
-                <span>Størrelse:</span> XS (S) M (L) XL (2XL)<br /><br />
-                <span>Strikkefasthet:</span> 12 masker x 18 rader i glattstrikk
-                på pinne 8 mm = 10 x 10 cm<br /><br />
-                <span>Veiledende pinner:</span> Rundpinne 8 mm, 40 cm og 60/80
-                cm, og rundpinne 8 mm 40 cm og strømpepinner eller rundpinne 60
-                cm (magic loop)<br /><br />
-                <span>Garn:</span> En tråd Drops Brushed Alpaca Silk sammen med
-                en tråd Drops Muskat<br /><br />
-                <span>Garnalternativ:</span> En tråd Dale garn Kidsilk Erle
-                eller DSA Fearytale sammen med en tråd Gjestal garn Pure Merino,
-                Dale garn Lerke, Dale garn Alpakka Forte, Dale garn Merino 22
-                eller Jord Clothing Woolly<br /><br />
-                <span>Garnmengde:</span>100 (100) 125 (150) 150 (200) g Drops
-                brushed alpaca silk Lys Lavendel 17 sammen med 350 (350) 400
-                (450) 500 (500) g Drops muskat Lavendel 01<br /><br />
-                <span>Mål:</span><br />
-                <span>Lengde bak:</span> 50 (51) 53 (59) 60 (63) cm <br /><span
-                  >Overvidde/bol:</span
-                >
-                110 (115) 120 (125) 135 (138) cm
-              </p>
-            </article>
-          </section>
-        </article> -->
-
         <!-- FRIDAS SWEATER ENGLISH -->
 
         <!-- <article id="fge" class="page-section--product">
@@ -746,16 +674,6 @@
             Oppskrifter
           </h2>
 
-          <!-- FILTER DROP DOWN -->
-          <article class="dropDown">
-            <button class="dropbtn">Velg språk ▼</button>
-            <div class="dropDownContent">
-              <a class="filter-item language-norsk">Norsk</a>
-              <a class="filter-item language-svenska">Svenska</a>
-              <a class="filter-item language-english">English</a>
-            </div>
-          </article>
-
           <!-- --------------- -->
           <!-- PATTER SHEET SECTION -->
           <!-- --------------- -->
@@ -816,7 +734,11 @@
                 </a>
 
                 <!-- FRIDAS GENSER -->
-                <a id="fgnCard" class="pattern-card norsk">
+                <a
+                  href="/HTML/Fridas-genser.html"
+                  id="fgnCard"
+                  class="pattern-card norsk"
+                >
                   <figure class="pattern-card-item">
                     <img
                       class="pattern-card-img"
