Create Malins genser page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -703,7 +703,11 @@
                 </a>
 
                 <!-- MALINS GENSER -->
-                <a id="mgnCard" class="pattern-card norsk">
+                <a
+                  href="/HTML/Malins-genser.html"
+                  id="mgnCard"
+                  class="pattern-card norsk"
+                >
                   <figure class="pattern-card-item">
                     <img
                       class="pattern-card-img"
