Create Evelinagenser page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -423,161 +423,6 @@
           </section>
         </article> -->
 
-        <!-- MALINS GENSER NORSK -->
-
-        <!-- <article id="mgn" class="page-section--product">
-          <i id="closeIconMgn" class="fa-solid fa-xmark pattern-page-icon"></i>
-          <p class="sticker">Norsk</p>
-          <h1 class="page-heading h1-heading product-heading font-size-6-4">
-            Malins genser
-          </h1>
-          <section class="grid grid--6-cols gap-6-4">
-            <article class="pattern-img-section">
-              <div class="pattern-img-main">
-                <img class="main-img" src="/Img/Malins-genser/1.png" />
-              </div>
-              <div class="pattern-img-other">
-                <img class="pattern-img" src="/Img/Malins-genser/2.png" />
-                <img class="pattern-img" src="/Img/Malins-genser/3.png" />
-                <img class="pattern-img" src="/Img/Malins-genser/4.png" />
-              </div>
-            </article>
-            <article class="pattern-text pattern-description">
-              <h3 class="text-heading">Beskrivelse</h3>
-              <p class="description">
-                Malins genser strikkes ovenfra og ned, i flettemønster og
-                v-hals. Halskanten i nakken lages først med provisional cast on,
-                før masker til bærestykke plukkes opp langs halsen.<br />
-                <br />
-                Halsen og bærestykke strikkes på likt med to ulike
-                pinnestørrelser. Ermer og bol blir til med raglanøkninger.
-                Genseren strikkes etter diagram.<br />
-                <br />
-                Genseren har en vid passform, og rette ermer. Genseren strikkes
-                i to forskjellige garnkvaliteter som tilsammen blir en utrolig
-                lett, luftig og deilig genser.<br />
-                <br />
-                Strikk alltid en prøvelapp først for å sjekke
-                strikkefastheten.<br /><br />
-
-                <span>Vanskelighetsgrad:</span>
-                4 av 5
-              </p>
-              <a
-                target="_blank"
-                href="https://www.ravelry.com/patterns/library/malins-genser"
-                class="btn btn--with-icon"
-              >
-                <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
-                KJØP PÅ RAVELRY
-              </a>
-            </article>
-            <article class="pattern-text pattern-info">
-              <h3 class="text-heading">Info</h3>
-              <p class="description">
-                <span>Størrelse:</span> XS (S) M (L) XL<br /><br />
-                <span>Strikkefasthet:</span> 14 masker etter diagram på p 9 mm =
-                10 cm<br /><br />
-                <span>Veiledende pinner:</span> Rundpinne 9 mm, 40 cm og 60/80
-                cm, og rundpinne 8 mm 60 cm og 40 cm eller rundpinne 60/80 cm
-                (magic loop)<br /><br />
-                <span>Materialer:</span> 300 (300) 350 (350) 400 g Woolevo Soft
-                Merino (50g = 105m), sammen med 150 (150) 175 (200) 200 g DSA
-                Dreamline Air (25g = 235m).<br /><br />
-
-                <span>Mål:</span><br />
-                <span>Lengde bak:</span> 50 (51) 52 (53) 56 cm <br /><span
-                  >Overvidde/bol:</span
-                >
-                100 (106) 112 (120) 126 cm
-              </p>
-            </article>
-          </section>
-        </article> -->
-        <!-- EVELINAGENSER NORSK -->
-
-        <!-- <article id="egn" class="page-section--product">
-          <i id="closeIconEgn" class="fa-solid fa-xmark pattern-page-icon"></i>
-          <p class="sticker">Norsk</p>
-          <h1 class="page-heading h1-heading product-heading font-size-6-4">
-            Evelinagenser
-          </h1>
-          <section class="grid grid--6-cols gap-6-4">
-            <article class="pattern-img-section">
-              <div class="pattern-img-main">
-                <img
-                  class="main-img"
-                  src="/Img/Evelinagenser/Evelinagenser 1.jpg"
-                />
-              </div>
-              <div class="pattern-img-other">
-                <img
-                  class="pattern-img"
-                  src="/Img/Evelinagenser/Evelinagenser 2.jpg"
-                />
-                <img
-                  class="pattern-img"
-                  src="/Img/Evelinagenser/Evelinagenser 3.jpg"
-                />
-                <img
-                  class="pattern-img"
-                  src="/Img/Evelinagenser/Evelinagenser 4.jpg"
-                />
-                <img
-                  class="pattern-img"
-                  src="/Img/Evelinagenser/Evelinagenser 5.jpg"
-                />
-              </div>
-            </article>
-            <article class="pattern-text pattern-description">
-              <h3 class="text-heading">Beskrivelse</h3>
-              <p class="description">
-                Fridagenser strikkes ovenfra og ned, i glattstrikk med vridde
-                vrangborder. Bærestykket starter med provisional cast on og blir
-                til med raglanøkninger. Genseren har en elegant v-hals og krage
-                som lages til slutt fra oppleggskanten.<br /><br />Genseren har
-                en vid passform, og rette ermer. Genseren strikkes i to
-                forskjellige garnkvaliteter som tilsammen blir en blanding av
-                ull, silke og bomull, som gjør genseren perfekt til alle
-                nordiske årstider.<br /><br />
-
-                <span>Vanskelighetsgrad:</span>
-                2 av 5
-              </p>
-              <a
-                target="_blank"
-                href="https://www.ravelry.com/patterns/library/evelinagenser"
-                class="btn btn--with-icon"
-              >
-                <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
-                KJØP PÅ RAVELRY
-              </a>
-            </article>
-            <article class="pattern-text pattern-info">
-              <h3 class="text-heading">Info</h3>
-              <p class="description">
-                <span>Størrelse:</span> XS (S) M (L) XL<br /><br />
-                <span>Strikkefasthet:</span>15 masker i glattstrikk på pinne 6
-                mm = 10 cm<br /><br />
-                <span>Veiledende pinner:</span> Rundpinne 6 mm, 40 cm og 60/80
-                cm, og rundpinne 5 mm 40 cm og strømpepinner eller rundpinne 60
-                cm (magic loop)<br /><br />
-                <span>Garn:</span> Drops brushed alpaca silk - dobbel tråd​
-                <br /><br />
-                <span>Garnmengde:</span>75 (75) 100 (100) 125 g lys lavendel 17
-                (hovedfarge), 25 (25) 50 (50) 75 g Natur 01, 25 (25) 50 (50) 75
-                g Fiolett 10 , 25 (25) 50 (50) 75 g Beige 05, 25 (25) 50 (50) 75
-                g Lys grågrønn 14, 25 (25) 50 (50) 75 g salvie grønn 21 = 200
-                (200) 350 (350) 500 g<br /><br />
-                <span>Mål:</span><br />
-                <span>Lengde bak:</span> 47 (51) 53 (56) 60 cm <br /><span
-                  >Overvidde/bol:</span
-                >
-                126 (130) 140 (144) 152 cm
-              </p>
-            </article>
-          </section>
-        </article> -->
         <!-- EVELINAGENSER SVENSK -->
 
         <!-- <article id="egs" class="page-section--product">
@@ -758,7 +603,11 @@
                 </a>
 
                 <!-- EVELINAGENSER -->
-                <a id="egnCard" class="pattern-card norsk">
+                <a
+                  href="/HTML/Evelinagenser.html"
+                  id="egnCard"
+                  class="pattern-card norsk"
+                >
                   <figure class="pattern-card-item">
                     <img
                       class="pattern-card-img"
