Create Guros genser page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -287,75 +287,6 @@
           </section>
         </article> -->
 
-        <!-- GUROS GENSER NORSK -->
-
-        <!-- <article id="ggn" class="page-section--product">
-          <i id="closeIconGgn" class="fa-solid fa-xmark pattern-page-icon"></i>
-          <p class="sticker">Norsk</p>
-          <h1 class="page-heading h1-heading product-heading font-size-6-4">
-            Guros genser
-          </h1>
-          <section class="grid grid--6-cols gap-6-4">
-            <article class="pattern-img-section">
-              <div class="pattern-img-main">
-                <img class="main-img" src="/Img/Guros-genser/1.png" />
-              </div>
-              <div class="pattern-img-other">
-                <img class="pattern-img" src="/Img/Guros-genser/2.png" />
-                <img class="pattern-img" src="/Img/Guros-genser/7.png" />
-                <img class="pattern-img" src="/Img/Guros-genser/3.png" />
-                <img class="pattern-img" src="/Img/Guros-genser/5.png" />
-              </div>
-            </article>
-            <article class="pattern-text pattern-description">
-              <h3 class="text-heading">Beskrivelse</h3>
-              <p class="description">
-                Guros genser strikkes ovenfra og ned i perleribb. En lang hals i
-                dobbel vrangbord strikkes først, før bærestykket blir til på
-                rundpinne med økninger til bolen.<br /><br />
-                Når økningene er ferdig strikkes forstykke og bakstykket hver
-                for seg, frem og tilbake, til åpning til ermer er dannet.
-                Etterpå strikkes bolen rundt igjen. <br /><br />Ermemasker
-                plukkes opp i ermeåpningen og strikkes først med vendepinner
-                (GSR). <br /><br />
-                Genseren er oversized, lang og vid. Ermene er vide og lange, og
-                halsen brettes ned. Guros genser er behagelig, fin og rett og
-                slett digg å ha på.<br /><br />
-
-                <span>Vanskelighetsgrad:</span>
-                3 av 5 (På grunn av GSR)
-              </p>
-              <a
-                target="_blank"
-                href="https://www.ravelry.com/patterns/library/guros-genser"
-                class="btn btn--with-icon"
-              >
-                <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
-                KJØP PÅ RAVELRY
-              </a>
-            </article>
-            <article class="pattern-text pattern-info">
-              <h3 class="text-heading">Info</h3>
-              <p class="description">
-                <span>Størrelse:</span> XS (S) M (L) XL (2XL)<br /><br />
-                <span>Strikkefasthet:</span> 20 masker perleribb på pinne 4,5
-                mm, ferdig blokket = 10 cm<br /><br />
-                <span>Veiledende pinner:</span> Rundpinne 4,5 mm, 40 cm og 60/80
-                cm, og rundpinne 4 mm 40 cm 60/80 cm<br /><br />
-                <span>Garn:</span> En tråd Dale garn Lerke (50g = 115m)<br /><br />
-                <span>Garnalternativ:</span> Sandnes Merinoull (50g = 105m)
-                eller Viking garn Alpaca Storm (50g = 133m)<br /><br />
-                <span>Garnmengde:</span> 650 (650) 700 (750) 800 (850) g Dale
-                garn Lerke<br /><br />
-                <span>Mål:</span><br />
-                <span>Lengde bak:</span> 67 (69) 71 (73) 75 (77) cm <br /><span
-                  >Overvidde/bol:</span
-                >
-                110 (122) 129 (136) 143 (152) cm
-              </p>
-            </article>
-          </section>
-        </article> -->
         <!-- GUROS SWEATER ENGLISH -->
 
         <!-- <article id="gge" class="page-section--product">
@@ -568,7 +499,11 @@
 
                 <!-- GUROS GENSER -->
 
-                <a id="ggnCard" class="pattern-card norsk">
+                <a
+                  href="/HTML/Guros-genser.html"
+                  id="ggnCard"
+                  class="pattern-card norsk"
+                >
                   <figure class="pattern-card-item">
                     <img
                       class="pattern-card-img"
